# newton_raphson

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  newton_raphson  readme.txt
src/: newton_raphson_class.hpp  wrapper.cpp
